load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")

kt_android_library(
    name = "kotlitex",
    custom_package = "io.github.karino2.kotlitex",
    srcs = glob(["src/main/java/**/*.kt"]),
    assets = glob(
        ["src/main/assets/**"],
    ),
    assets_dir = "src/main/assets/",
    manifest = "src/main/AndroidManifest.xml",
    exports_manifest = True,
    visibility = ["//visibility:public"],
)
