load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")

kt_android_library(
    name = "kotlitex",
    custom_package = "io.github.karino2.kotlitex",
    srcs = glob(["src/main/java/**/*.kt"]),
    assets = glob(
        ["src/main/assets/**"],
    ),
    assets_dir = "src/main/assets/",
    manifest = "src/main/AndroidManifest.xml",
    exports_manifest = True,
    visibility = ["//visibility:public"],
    deps = [
      artifact("androidx.appcompat:appcompat"),
      artifact("androidx.test.espresso:espresso-core"),
      artifact("androidx.test.ext:junit"),
      artifact("androidx.test:runner"),
      artifact("org.jetbrains.kotlinx:kotlinx-coroutines-core"),
      artifact("org.jetbrains.kotlinx:kotlinx-coroutines-android"),
      artifact("androidx.appcompat:appcompat"),
      artifact("androidx.test:core"),
      artifact("androidx.test.ext:junit"),
      artifact("junit:junit"),
      artifact("androidx.test:rules"),
    ],
)
