load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_android_library(
    name = "kotlitex",
    custom_package = "io.github.karino2.kotlitex",
    srcs = glob(["src/main/java/**/*.kt"]),
    assets = glob(
        ["src/main/assets/**"],
    ),
    assets_dir = "src/main/assets/",
    manifest = "src/main/AndroidManifest.xml",
    exports_manifest = True,
    visibility = ["//visibility:public"],
    deps = [
      artifact("org.jetbrains.kotlinx:kotlinx-coroutines-core"),
      artifact("org.jetbrains.kotlinx:kotlinx-coroutines-android"),
    ],
)
